--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,12 @@ similar = "2"
 
 [dev-dependencies]
 tempfile = "3"
+insta = "1"
+regex = "1"
+[lib]
+name = "hashline_tools"
+path = "src/lib.rs"
+
+[[bin]]
+name = "hashline-tools"
+path = "src/main.rs"
