--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-twox-hash = "1"
+xxhash-rust = { version = "0.8", features = ["xxh32"] }
 similar = "2"
 
 [dev-dependencies]
